deploy/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: signal
  labels:
    app.kubernetes.io/part-of: signal
    app.kubernetes.io/managed-by: argocd
