deploy/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal
spec:
  selector:
    app.kubernetes.io/name: signal
  ports:
    - name: http
      port: 3000
      targetPort: http
  type: ClusterIP
